Switch to Fluture

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "crypto-md5": "^1.0.0",
     "date-fp": "^1.6.3",
-    "ramda-fantasy": "^0.4.1",
+    "fluture": "^0.5.2",
     "request": "^2.65.0"
   }
 }
